# couch2mongo

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml
src/: main.rs
src/seqstore/: dynamodb.rs  interface.rs  mod.rs  null.rs  redis.rs
src/settings/: config_parser.rs  mod.rs
