[package]
name = "streamcouch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures-util = "0.3.28"
async-trait = "0.1.68"

# CouchDB
couch_rs = "0.9.2"

# MongoDB
bson = "2.6.1"
mongodb = "2.5.0"

# Generic JSON stuff
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"

# AWS
aws-config = "0.55.2"
aws-sdk-dynamodb = "0.27.0"

# Redis
redis = { version = "0.23.0", features = ["tokio-rustls-comp"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

# Configuration
config = "0.13.3"
clap = { version = "4.3.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.11.4"