[package]
name = "streamcouch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
futures-util = "0.3.29"
async-trait = "0.1.74"

# CouchDB
couch_rs = "0.9.4"

# MongoDB
bson = "=2.7.0"
mongodb = { version = "=2.7.1", features = ["aws-auth"] }

# Generic JSON stuff
serde = "1.0.192"
serde_json = "1.0.108"
serde_derive = "1.0.192"

# AWS
aws-config = "=0.56.1"
aws-sdk-dynamodb = "=0.32.0"

# Redis
redis = { version = "0.23.3", features = ["tokio-rustls-comp"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Configuration
config = "0.13.3"
clap = { version = "4.4.8", features = ["derive"] }

[dev-dependencies]
mockall = "0.11.4"
