[package]
name = "streamcouch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
futures-util = "0.3.29"
async-trait = "0.1.74"

# CouchDB
couch_rs = "0.9.4"

# MongoDB
bson = "=2.7.0"
mongodb = { version = "=2.7.1", features = ["aws-auth"] }

# Generic JSON stuff
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"

# AWS
aws-config = "=1.0.3"
aws-sdk-dynamodb = "=1.4.0"

# Redis
redis = { version = "0.24.0", features = ["tokio-rustls-comp"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Configuration
config = "0.13.4"
clap = { version = "4.4.11", features = ["derive"] }

[dev-dependencies]
mockall = "0.12.0"
